--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -59,6 +59,7 @@ catalogs:
   storybook:
     '@storybook/addon-docs': 10.0.8
     '@storybook/angular': 10.0.8
+    '@storybook/test': ^8.6.14
     storybook: 10.0.8
   testing-library:
     '@testing-library/angular': ^17.4.0
