--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -68,11 +68,11 @@ catalogs:
     '@testing-library/react': ^16.3.0
     '@testing-library/user-event': ^14.6.1
   typescript:
-    '@types/node': ^22.14.0
+    '@types/node': ^24.1.0
     ts-morph: ^27.0.2
-    tslib: ^2.8.0
+    tslib: ^2.8.1
     tsx: 4.7.0
-    typescript: ~5.8.3
+    typescript: 5.9.3
 
 cleanupUnusedCatalogs: true
 
