--- a/package.json
+++ b/package.json
@@ -23,28 +23,28 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@digdir/designsystemet": "catalog:designsystemet",
-    "@nx/angular": "22.1.1",
-    "@nx/devkit": "22.1.1",
-    "@nx/eslint": "22.1.1",
-    "@nx/eslint-plugin": "22.1.1",
-    "@nx/js": "22.1.1",
-    "@nx/playwright": "22.1.1",
-    "@nx/react": "22.1.1",
-    "@nx/storybook": "22.1.1",
-    "@nx/vite": "22.1.1",
-    "@nx/web": "22.1.1",
+    "@nx/angular": "catalog:nx",
+    "@nx/devkit": "catalog:nx",
+    "@nx/eslint": "catalog:nx",
+    "@nx/eslint-plugin": "catalog:nx",
+    "@nx/js": "catalog:nx",
+    "@nx/playwright": "catalog:nx",
+    "@nx/react": "catalog:nx",
+    "@nx/storybook": "catalog:nx",
+    "@nx/vite": "catalog:nx",
+    "@nx/web": "catalog:nx",
     "@playwright/test": "^1.56.1",
-    "@schematics/angular": "20.3.9",
-    "@storybook/addon-docs": "10.0.8",
-    "@storybook/angular": "10.0.8",
-    "@storybook/test": "^8.6.14",
+    "@schematics/angular": "catalog:angular",
+    "@storybook/addon-docs": "catalog:storybook",
+    "@storybook/angular": "catalog:storybook",
+    "@storybook/test": "catalog:storybook",
     "@swc-node/register": "~1.9.2",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.29",
     "@swc/helpers": "~0.5.17",
-    "@testing-library/dom": "10.4.1",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20.19.25",
+    "@testing-library/dom": "catalog:testing-library",
+    "@testing-library/user-event": "catalog:testing-library",
+    "@types/node": "catalog:typescript",
     "@typescript-eslint/utils": "^8.47.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^4.0.12",
@@ -59,24 +59,24 @@
     "jiti": "2.4.2",
     "jsdom": "~27.2.0",
     "lint-staged": "^15.5.2",
-    "nx": "22.1.1",
+    "nx": "catalog:nx",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "postcss-import": "^16.1.1",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
-    "storybook": "10.0.8",
-    "ts-morph": "^27.0.2",
-    "tslib": "^2.8.1",
-    "tsx": "^4.20.6",
-    "typescript": "5.9.3",
+    "storybook": "catalog:storybook",
+    "ts-morph": "catalog:typescript",
+    "tslib": "catalog:typescript",
+    "tsx": "catalog:typescript",
+    "typescript": "catalog:typescript",
     "typescript-eslint": "^8.47.0",
     "vite": "7.2.4",
     "vite-plugin-dts": "~4.5.4",
     "vitest": "^4.0.12"
   },
-  "packageManager": "pnpm@10.27.0+sha512.72d699da16b1179c14ba9e64dc71c9a40988cbdc65c264cb0e489db7de917f20dcf4d64d8723625f2969ba52d4b7e2a1170682d9ac2a5dcaeaab732b7e16f04a",
+  "packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
   "engines": {
-    "node": "22.14.0"
+    "node": "24.13.0"
   }
 }
