--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,10 @@ jobs:
         shell: bash
 
       - name: Publish packages
-        run: npx nx release publish
+        run: |
+          node --version
+          npm --version
+          npx nx release publish
         shell: bash
         env:
           NPM_CONFIG_PROVENANCE: true
