--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,12 +8,12 @@ on:
       - v*.*.*
 
 jobs:
-  test:
+  publish:
     name: Publish
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      id-token: write # needed for provenance data generation
+      id-token: write # Required for OIDC
     timeout-minutes: 10
     steps:
       - name: Checkout repository
