--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     ]
   },
   "devDependencies": {
-    "@analogjs/storybook-angular": "~2.1.0",
-    "@analogjs/vite-plugin-angular": "~2.1.0",
-    "@analogjs/vitest-angular": "~2.1.0",
+    "@analogjs/storybook-angular": "2.1.3",
+    "@analogjs/vite-plugin-angular": "2.1.3",
+    "@analogjs/vitest-angular": "2.1.3",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@digdir/designsystemet": "catalog:designsystemet",
@@ -46,8 +46,8 @@
     "@testing-library/user-event": "catalog:testing-library",
     "@types/node": "catalog:typescript",
     "@typescript-eslint/utils": "^8.47.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^4.0.12",
+    "@vitest/coverage-v8": "4.0.9",
+    "@vitest/ui": "4.0.9",
     "chromatic": "^13.3.4",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
@@ -73,7 +73,7 @@
     "typescript-eslint": "^8.47.0",
     "vite": "7.2.4",
     "vite-plugin-dts": "~4.5.4",
-    "vitest": "^4.0.12"
+    "vitest": "4.0.9"
   },
   "packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
   "engines": {
