--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nx/react": "catalog:nx",
     "@nx/storybook": "catalog:nx",
     "@nx/vite": "catalog:nx",
+    "@nx/vitest": "22.3.3",
     "@nx/web": "catalog:nx",
     "@playwright/test": "^1.56.1",
     "@schematics/angular": "catalog:angular",
@@ -78,5 +79,6 @@
   "packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
   "engines": {
     "node": "24.13.0"
-  }
+  },
+  "dependencies": {}
 }
