chore: [nx migration] update-typescript-lib-22-2-0

--- a/apps/angular-demo/tsconfig.json
+++ b/apps/angular-demo/tsconfig.json
@@ -9,7 +9,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "module": "preserve",
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "lib": ["dom", "es2022"]
   },
   "files": [],
   "include": [],
