fix(angular): lock workspace version of angular

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -28,7 +28,9 @@
     "@angular-eslint/eslint-plugin-template": "catalog:angular",
     "@angular-eslint/schematics": "catalog:angular",
     "@angular-eslint/template-parser": "catalog:angular",
+    "@angular/common": "catalog:angular",
     "@angular/compiler": "catalog:angular",
+    "@angular/core": "catalog:angular",
     "@angular/router": "catalog:angular",
     "@angular/platform-browser": "catalog:angular",
     "@ng-icons/core": "catalog:angular",
