--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -17,8 +17,7 @@
   },
   "peerDependencies": {
     "@angular/common": "catalog:angular-supported-versions",
-    "@angular/core": "catalog:angular-supported-versions",
-    "@ks-digital/designsystem-themes": "workspace:*"
+    "@angular/core": "catalog:angular-supported-versions"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "catalog:angular",
