--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,86 +1,95 @@
 packages:
-  - 'apps/*'
-  - 'packages/*'
+  - apps/*
+  - packages/*
+
+blockExoticSubdeps: true
+
 catalogs:
   angular:
-    '@angular-devkit/build-angular': '21.0.4'
-    '@angular-eslint/builder': '^21.1.0'
-    '@angular-eslint/bundled-angular-compiler': '^21.1.0'
-    '@angular-eslint/eslint-plugin': '^21.1.0'
-    '@angular-eslint/eslint-plugin-template': '^21.1.0'
-    '@angular-eslint/schematics': '^21.1.0'
-    '@angular-eslint/template-parser': '21.1.0'
-    '@angular/animations': '21.0.6'
-    '@angular/build': '21.0.4'
-    '@angular/common': '21.0.6'
-    '@angular/compiler': '21.0.6'
-    '@angular/compiler-cli': '21.0.6'
-    '@angular/core': '21.0.6'
-    '@angular/platform-browser': '21.0.6'
-    '@angular/platform-server': '21.0.6'
-    '@angular/router': '21.0.6'
-    '@ng-icons/core': '^32.5.0'
-    '@ng-icons/phosphor-icons': '^33.0.0'
-    '@schematics/angular': '21.0.4'
-    angular-eslint: '21.0.0'
-    ng-packagr: '21.0.1'
-    zone.js: '0.16.0'
+    '@angular-devkit/build-angular': 21.0.4
+    '@angular-eslint/builder': ^21.1.0
+    '@angular-eslint/bundled-angular-compiler': ^21.1.0
+    '@angular-eslint/eslint-plugin': ^21.1.0
+    '@angular-eslint/eslint-plugin-template': ^21.1.0
+    '@angular-eslint/schematics': ^21.1.0
+    '@angular-eslint/template-parser': 21.1.0
+    '@angular/animations': 21.0.6
+    '@angular/build': 21.0.4
+    '@angular/common': 21.0.6
+    '@angular/compiler': 21.0.6
+    '@angular/compiler-cli': 21.0.6
+    '@angular/core': 21.0.6
+    '@angular/platform-browser': 21.0.6
+    '@angular/platform-server': 21.0.6
+    '@angular/router': 21.0.6
+    '@ng-icons/core': ^32.5.0
+    '@ng-icons/phosphor-icons': ^33.0.0
+    '@schematics/angular': 21.0.4
+    angular-eslint: 21.0.0
+    ng-packagr: 21.0.1
+    zone.js: 0.16.0
   angular-supported-versions:
     '@angular/common': '>= 21.0.0'
     '@angular/core': '>= 21.0.0'
   designsystemet:
-    '@digdir/designsystemet': '1.7.3'
-    '@digdir/designsystemet-css': '1.7.3'
-    '@digdir/designsystemet-react': '1.7.3'
-    '@navikt/aksel-icons': '7.33.4'
+    '@digdir/designsystemet': 1.7.3
+    '@digdir/designsystemet-css': 1.7.3
+    '@digdir/designsystemet-react': 1.7.3
+    '@navikt/aksel-icons': 7.33.4
   nx:
-    '@nx/angular': '22.3.3'
-    '@nx/devkit': '22.3.3'
-    '@nx/eslint': '22.3.3'
-    '@nx/eslint-plugin': '22.3.3'
-    '@nx/js': '22.3.3'
-    '@nx/playwright': '22.3.3'
-    '@nx/react': '22.3.3'
-    '@nx/storybook': '22.3.3'
-    '@nx/vite': '22.3.3'
-    '@nx/web': '22.3.3'
-    nx: '22.3.3'
+    '@nx/angular': 22.3.3
+    '@nx/devkit': 22.3.3
+    '@nx/eslint': 22.3.3
+    '@nx/eslint-plugin': 22.3.3
+    '@nx/js': 22.3.3
+    '@nx/playwright': 22.3.3
+    '@nx/react': 22.3.3
+    '@nx/storybook': 22.3.3
+    '@nx/vite': 22.3.3
+    '@nx/web': 22.3.3
+    nx: 22.3.3
   react:
-    '@types/react': '19.0.0'
-    '@types/react-dom': '19.0.0'
-    react: '19.0.0'
-    react-dom: '19.0.0'
+    '@types/react': 19.0.0
+    '@types/react-dom': 19.0.0
+    react: 19.0.0
+    react-dom: 19.0.0
   react-supported-versions:
     react: '>=18.3.1'
     react-dom: '>=18.3.1'
   storybook:
-    '@storybook/addon-docs': '10.0.8'
-    '@storybook/angular': '10.1.9'
-    '@storybook/test': '^8.6.14'
-    storybook: '10.1.9'
+    '@storybook/addon-docs': 10.0.8
+    '@storybook/angular': 10.1.9
+    '@storybook/test': ^8.6.14
+    storybook: 10.1.9
   testing-library:
-    '@testing-library/angular': '^17.4.0'
-    '@testing-library/dom': '10.4.1'
-    '@testing-library/jest-dom': '~6.6.3'
-    '@testing-library/react': '^16.3.0'
-    '@testing-library/user-event': '^14.6.1'
+    '@testing-library/angular': ^17.4.0
+    '@testing-library/dom': 10.4.1
+    '@testing-library/jest-dom': ~6.6.3
+    '@testing-library/react': ^16.3.0
+    '@testing-library/user-event': ^14.6.1
   typescript:
-    '@types/node': '^24.1.0'
-    ts-morph: '^27.0.2'
-    tslib: '^2.8.1'
-    tsx: '4.7.0'
-    typescript: '5.9.3'
-blockExoticSubdeps: true
-onlyBuiltDependencies:
-  - 'esbuild'
-  - 'nx'
-minimumReleaseAge: 2880
-trustPolicy: 'no-downgrade'
-trustPolicyIgnoreAfter: 10080
+    '@types/node': ^24.1.0
+    ts-morph: ^27.0.2
+    tslib: ^2.8.1
+    tsx: 4.7.0
+    typescript: 5.9.3
+
 cleanupUnusedCatalogs: true
-verifyDepsBeforeRun: 'prompt'
+
+minimumReleaseAge: 2880
+
+onlyBuiltDependencies:
+  - esbuild
+  - nx
+
+trustPolicy: no-downgrade
+
 trustPolicyExclude:
-  - 'chokidar@4.0.3'
-  - 'detect-port@1.6.1'
-  - 'undici-types@6.21.0'
-  - 'semver@6.3.1'
+  - chokidar@4.0.3
+  - detect-port@1.6.1
+  - undici-types@6.21.0
+  - semver@6.3.1
+
+trustPolicyIgnoreAfter: 10080
+
+verifyDepsBeforeRun: prompt
