--- a/packages/angular/tsconfig.spec.json
+++ b/packages/angular/tsconfig.spec.json
@@ -8,7 +8,8 @@
       "vite/client",
       "node",
       "vitest",
-      "@testing-library/jest-dom"
+      "@testing-library/jest-dom",
+      "@digdir/designsystemet-web"
     ]
   },
   "include": [
