--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 public-hoist-pattern[]=@angular/*
 public-hoist-pattern[]=@u-elements/*
-public-hoist-pattern[]=@floating-ui/dom
+public-hoist-pattern[]=@digdir/designsystemet-web
