chore(pnpm): update ignored and only built dependencies in pnpm-workspace.yaml (#220)

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -78,9 +78,19 @@ cleanupUnusedCatalogs: true
 
 minimumReleaseAge: 2880
 
+ignoredBuiltDependencies:
+  - less
+
 onlyBuiltDependencies:
+  - '@parcel/watcher'
+  - '@swc/core'
   - esbuild
+  - lmdb
+  - msgpackr-extract
+  - msw
   - nx
+  - sharp
+  - unrs-resolver
 
 trustPolicy: no-downgrade
 
