--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -67,6 +67,8 @@ catalogs:
     '@testing-library/jest-dom': ~6.6.3
     '@testing-library/react': ^16.3.0
     '@testing-library/user-event': ^14.6.1
+  vitest-a11y:
+    vitest-axe: ^0.1.0
   typescript:
     '@types/node': ^24.1.0
     ts-morph: ^27.0.2
